<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InformationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AboutApp_title"
            android:text="@string/info_app"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:layout_marginTop="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AboutApp_Body"
            android:text="@string/AppInfo_body"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="20sp"
            android:layout_margin="10sp"
            android:layout_below="@id/AboutApp_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AboutApp_Body2"
            android:text="@string/AppInfo_body2"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="20sp"
            android:layout_margin="10sp"
            android:layout_below="@id/AboutApp_Body"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AboutStudent_title"
            android:text="@string/info_student"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:layout_below="@id/AboutApp_Body2"
            android:layout_margin="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/AboutStudent_title"
            android:gravity="center_vertical|center_horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/stud1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/thea"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/name1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="NAME: "
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/stud1"/>

                    <TextView
                        android:id="@+id/name_stud1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="Alata, Thea Belle A."
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/name1"/>

                    <TextView
                        android:id="@+id/Course1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="COURSE and YEAR: "
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/name1"
                        app:layout_constraintLeft_toRightOf="@id/stud1"/>

                    <TextView
                        android:id="@+id/IdNum_stud1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="BSIT-4a"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/name_stud1"
                        app:layout_constraintLeft_toRightOf="@id/Course1"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/stud2"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/jeffry"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="NAME: "
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/stud2"/>

                    <TextView
                        android:id="@+id/name_stud2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="Pinca, Jefferson N."
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/name2"/>

                    <TextView
                        android:id="@+id/Course2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="COURSE and YEAR: "
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/name2"
                        app:layout_constraintLeft_toRightOf="@id/stud2"/>

                    <TextView
                        android:id="@+id/IdNum_stud2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="BSIT-4a"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/name_stud2"
                        app:layout_constraintLeft_toRightOf="@id/Course2"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>





</FrameLayout>